crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__struct_init_shorthand.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics:
  - severity: Warning
    code: E0003
    message: missing separator
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 27
          end: 27
        message: "consider adding `;` here"
    notes: []
  - severity: Warning
    code: E0003
    message: missing separator
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 43
          end: 43
        message: "consider adding `;` here"
    notes: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 7
            params:
              open:
                start: 7
                end: 8
              inner: []
              close:
                start: 8
                end: 9
            result: ~
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 10
                    end: 11
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 2
                              span:
                                start: 22
                                end: 23
                            ty: ~
                            value:
                              inner:
                                Int:
                                  value: 1
                              span:
                                start: 26
                                end: 27
                        span:
                          start: 16
                          end: 27
                      separator: ~
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 3
                              span:
                                start: 38
                                end: 39
                            ty: ~
                            value:
                              inner:
                                Int:
                                  value: 2
                              span:
                                start: 42
                                end: 43
                        span:
                          start: 32
                          end: 43
                      separator: ~
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 4
                              span:
                                start: 54
                                end: 55
                            ty: ~
                            value:
                              inner:
                                StructInit:
                                  name:
                                    inner: 5
                                    span:
                                      start: 58
                                      end: 63
                                  fields:
                                    open:
                                      start: 65
                                      end: 66
                                    inner:
                                      - inner:
                                          inner:
                                            name:
                                              inner: 2
                                              span:
                                                start: 67
                                                end: 68
                                            value: ~
                                          span:
                                            start: 67
                                            end: 68
                                        separator:
                                          start: 68
                                          end: 69
                                      - inner:
                                          inner:
                                            name:
                                              inner: 3
                                              span:
                                                start: 70
                                                end: 71
                                            value: ~
                                          span:
                                            start: 70
                                            end: 71
                                        separator: ~
                                    close:
                                      start: 72
                                      end: 73
                              span:
                                start: 58
                                end: 73
                        span:
                          start: 48
                          end: 73
                      separator: ~
                  close:
                    start: 74
                    end: 75
            span:
              start: 10
              end: 75
      span:
        start: 0
        end: 75
    separator: ~
